<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Shift &amp; Drift</string>
    <string name="inizio_gara">Inizio Gara!</string>
    <string name="in_attesa_di_altri_giocatori">In attesa di altri giocatori...</string>
    <string name="avvia_gioco">Avvia Gioco</string>
    <string name="crea_unisciti_a_partita">Crea/Unisciti a Partita</string>
    <string name="gara">"Gara: "</string>
    <string name="crea_gara">Crea Gara</string>
    <string name="unisciti">Unisciti</string>
    <string name="continua">Continua</string>
    <string name="giocatori_nella_gara">Giocatori nella gara:</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="avvia_gara">Avvia gara</string>
    <string name="esci_dalla_gara">Esci dalla gara</string>
    <string name="gioca">Gioca</string>
    <string name="cambia_nome_giocatore">Cambia nome giocatore o colore macchina</string>
    <string name="modifica_nome_giocatore">Modifica Nome Giocatore</string>
    <string name="salva">Salva</string>
    <string name="giocatore">"Giocatore: "</string>
    <string name="giocatori">giocatori</string>
    <string name="gare_disponibili">Gare disponibili:</string>
    <string name="nome_gara">Nome Gara</string>
    <string name="inserisci_nome_gara">Inserisci il nome della gara</string>
    <string name="annulla">Annulla</string>
    <string name="conferma">Conferma</string>
    <string name="stato">"Stato: "</string>
    <string name="waiting">In attesa</string>
    <string name="playing">In corso</string>
    <string name="ended">Terminata</string>
    <string name="rolling">Preparazione</string>
    <string name="unknown">Sconosciuto</string>
    <string name="missing">Non disponibile</string>
    <string name="termina_gara">Termina Gara</string>
    <string name="alettone_posteriore">Alettone Posteriore</string>
    <string name="alettone_anteriore">Alettone Anteriore</string>
    <string name="carlinga">Carlinga</string>
    <string name="aggiungi_bot">Aggiungi Bot</string>
    <string name="seleziona_pista">Seleziona pista</string>
    <string name="nessuna_pista">Nessuna pista presente</string>
    <string name="nessuna_pista_selezionata">Nessuna pista selezionata</string>
    <string name="track_image">Immagine Tracciato</string>
    <string name="pista_selezionata">Pista selezionata:</string>
    <string name="premi_per_tirare">Premi sul dado per tirare</string>
    <string name="non_ha_ancora_tirato">Non ha ancora tirato</string>
    <string name="ha_tirato">Ha tirato:</string>
    <string name="prepara_griglia">Avvia griglia</string>
    <string name="a_elenco_gare">vai a elenco gare</string>
    <string name="a_gestione_gara">vai a gestione gara</string>
    <string name="giro">Giro:</string>
    <string name="stops">Fermate:</string>
</resources>
