<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Immagine di sfondo -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/fde_background"
        android:alpha="0.3" /> <!-- semi-trasparente -->

    <!-- Contenuto in primo piano -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:background="@android:color/transparent">

        <TextView
            android:text="@string/app_name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giocatore"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gioca" />

        <Button
            android:id="@+id/buttonChangeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambia_nome_giocatore"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</RelativeLayout>
