<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/textGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/gara"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/giocatore"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pista_selezionata"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textGameTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/nessuna_pista_selezionata"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/diceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/premi_per_tirare"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/dado_nero" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/giocatori_nella_gara"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/playerRollsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonToGameActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/border_imagebutton"
            android:scaleType="fitCenter"
            android:src="@drawable/exit_icon"
            android:visibility="gone"/>
        <ImageButton
            android:id="@+id/buttonToGamesLobbyActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/border_imagebutton"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_format_list_bulleted_24" />
    </LinearLayout>
</LinearLayout>
