<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    android:gravity="center"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/textPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giocatore"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/buttonCreateGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crea_gara"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gare_disponibili"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <ListView
        android:id="@+id/listViewGames"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
